--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تحميل تطبيق Aite</title>
+    <title>Aite - تحميل مباشر</title>
     <style>
+        /* تنسيقات الصفحة */
         body {
             margin: 0;
             padding: 20px;
@@ -13,7 +14,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background-color: #0b111d; /* خلفية داكنة احترافية */
+            background-color: #0b111d; /* لون خلفية داكن وراقي */
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: white;
         }
@@ -24,44 +25,48 @@
             text-align: center;
         }
 
+        /* تصميم الصورة */
         .main-image {
             width: 100%;
             border-radius: 20px;
             box-shadow: 0 10px 40px rgba(0,0,0,0.6);
             margin-bottom: 30px;
+            display: block;
         }
 
+        /* تصميم زر التحميل */
         .download-btn {
             display: inline-block;
             width: 90%;
             padding: 18px 0;
-            background-color: #ffffff; /* زر أبيض مثل الموجود بالصورة */
+            background-color: #ffffff; /* لون أبيض جذاب */
             color: #000000;
             text-decoration: none;
             font-weight: bold;
             font-size: 1.4rem;
             border-radius: 50px;
-            box-shadow: 0 5px 20px rgba(255, 255, 255, 0.2);
+            box-shadow: 0 5px 20px rgba(255, 255, 255, 0.15);
             transition: all 0.3s ease;
             cursor: pointer;
             border: none;
         }
 
+        /* تأثيرات عند تمرير الماوس */
         .download-btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(255, 255, 255, 0.3);
-            background-color: #f0f0f0;
+            transform: translateY(-4px);
+            background-color: #f8f8f8;
+            box-shadow: 0 10px 30px rgba(255, 255, 255, 0.25);
         }
 
         .download-btn:active {
-            transform: scale(0.97);
+            transform: scale(0.96);
         }
 
-        .info {
-            margin-top: 20px;
+        .footer-info {
+            margin-top: 25px;
             font-size: 0.85rem;
-            color: #7f8c8d;
-            line-height: 1.6;
+            color: #636e72;
+            line-height: 1.5;
         }
     </style>
 </head>
@@ -70,13 +75,13 @@
     <div class="container">
         <img src="https://res.cloudinary.com/duixjs8az/image/upload/v1767031280/post_media/1767031280357-Brown%20Black%20Modern%20Apps%20Food%20Instagram%20Post.png" alt="Aite App" class="main-image">
         
-        <a href="https://drive.google.com/uc?export=download&id=1jPatmbKkYwZdqQnEY8KCF1_9_BYgburJ" class="download-btn">
+        <a href="https://www.dropbox.com/scl/fi/np7gipdpqltedtwoqx7gz/Aite.apk?rlkey=qj0817slfgquvd1lidbzuxq91&st=l9wpiye1&dl=1" class="download-btn">
             حمل الآن !
         </a>
 
-        <div class="info">
-            نسخة APK آمنة ومباشرة <br>
-            تأكد من تفعيل "التثبيت من مصادر غير معروفة" في هاتفك
+        <div class="footer-info">
+            تطبيق Aite - نسخة APK أصلية <br>
+            رابط دائم وآمن للتحميل المباشر
         </div>
     </div>
 
