--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         </a>
 
         <div class="footer-info">
-            تطبيق Aite - نسخة APK أصلية <br>
-            رابط دائم وآمن للتحميل المباشر
+            تطبيق Aite - تجربة سريعة وسلسة
+            حمله الآن!<br>
+            
         </div>
     </div>
 
