--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="container">
         <img src="https://res.cloudinary.com/duixjs8az/image/upload/v1767031280/post_media/1767031280357-Brown%20Black%20Modern%20Apps%20Food%20Instagram%20Post.png" alt="Aite App" class="main-image">
         
-        <a href="https://2012.filemail.com/api/file/get?filekey=PwETaVH7WEywGHFVsdjCb_faFbZn5GuwiOYdOh9VukJ3eZ5ZKi_tH-q4&pk_vid=acd0838d890d9ac51767205798f0d7c6" class="download-btn">
+        <a href="https://www.mediafire.com/file/edsb4hmivjhwq6i/Aite.apk/file?dkey=k4walb19oe1&r=238" class="download-btn">
             حمل الآن !
         </a>
 
