--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="container">
         <img src="https://res.cloudinary.com/duixjs8az/image/upload/v1767031280/post_media/1767031280357-Brown%20Black%20Modern%20Apps%20Food%20Instagram%20Post.png" alt="Aite App" class="main-image">
         
-        <a href="https://www.mediafire.com/file/edsb4hmivjhwq6i/Aite.apk/file?dkey=k4walb19oe1&r=238" class="download-btn">
+        <a href="https://www.mediafire.com/file/wi06jk0oxao9soj/Aite.apk?dkey=bm5snfgc9qb&r=1416" class="download-btn">
             حمل الآن !
         </a>
 
